welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
while (!sortieTrouv?e) {
  var compteur = 0
  for (i <- 1 to 5) {if (estSurBiscuit) {compteur=compteur+1};avance()}
  if (compteur >= 3) {gauche()}
  else {droite()}
}